--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,20 @@
 blinker==1.4
+boto3==1.9.13
+botocore==1.12.13
 click==6.7
+docutils==0.14
 Flask==1.0.2
 Flask-DebugToolbar==0.10.1
 Flask-SQLAlchemy==2.3.2
 itsdangerous==0.24
 Jinja2==2.10
+jmespath==0.9.3
 MarkupSafe==1.0
+pkg-resources==0.0.0
 psycopg2==2.7.5
+python-dateutil==2.7.3
+s3transfer==0.1.13
+six==1.11.0
 SQLAlchemy==1.2.8
+urllib3==1.23
 Werkzeug==0.14.1
